Kubernetes/Frontend Application/My Dockerized Portfolio/K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
      - foo.bar.com
      secretName: foo-bar-tls
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: np-service
            port:
              number: 80
